--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,7 @@ services:
   grafana:
     image: grafana/grafana
     environment:
-      GF_AUTH_ANONYMOUS_ENABLED: "true"
-      GF_AUTH_ANONYMOUS_ORG_ROLE: "Admin"
+      GF_AUTH_ANONYMOUS_ENABLED: "false"
       GF_LOG_LEVEL: debug
       GF_SERVER_ROUTER_LOGGING: "true"
     ports:
