docs: enhance npm package mentions and add badges
- Add npm downloads badge to README
- Add GitHub stars badge
- Add dedicated NPM Package section
- Add author attribution section
- Add bugs and homepage fields to package.json
- Improve package visibility and discoverability

--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "type": "git",
     "url": "git+https://github.com/leval-ai/mcp-grafana.git"
   },
+  "bugs": {
+    "url": "https://github.com/leval-ai/mcp-grafana/issues"
+  },
+  "homepage": "https://github.com/leval-ai/mcp-grafana#readme",
   "keywords": [
     "mcp",
     "grafana",
