chore: migrate repository from leval-ai to levalhq
- Update all repository URLs in package.json
- Update all GitHub links in README.md
- Update repository references in GitHub workflows
- Update git remote to new repository location

--- a/.github/workflows/manual-release.yml
+++ b/.github/workflows/manual-release.yml
@@ -165,8 +165,8 @@ jobs:
             ${{ steps.changelog.outputs.changelog }}
             
             ### 📚 Documentation
-            - [Setup Guide](https://github.com/leval-ai/mcp-grafana#-mcp-client-configuration)
-            - [Available Tools](https://github.com/leval-ai/mcp-grafana#-available-tools-43-total)
+            - [Setup Guide](https://github.com/levalhq/mcp-grafana#-mcp-client-configuration)
+            - [Available Tools](https://github.com/levalhq/mcp-grafana#-available-tools-43-total)
             - [npm Package](https://www.npmjs.com/package/@leval/mcp-grafana)
           files: |
             leval-mcp-grafana-*.tgz
